--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
         <h1 class="mb-0">Marinho
           <span class="text-primary">Elton</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+        <div class="subheading mb-5">163 Jose Linhares Street  · Macae-RJ, CO 27920-360 · (62) 99126 8200 ·
           <a href="mailto:eltoncarv@yahoo.com.br">eltoncarv@yahoo.com.br</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to obtain good collective results and quality of the company's services</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/eltoncarv/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/eltonmarinho">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/eltoncarv">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -95,38 +95,43 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <div class="subheading mb-3">OWN Solutions</div>
+            <p>Working in some Angular projects as a freelancer and getting experience at the same time.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">Dec 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Information System Support Specialist</h3>
+            <div class="subheading mb-3">Sapiensia Technology and Development Full-time</div>
+            <p>Macaé, Rio de Janeiro, Brazil<br>
+              • Agile teams using tools like JIRA.
+              • Advanced knowledge of SQL, Elasticsearch, Slack, HTML, CSS, GIT.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">May 2014 - Dec 2018</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">System Support Specialist</h3>
+            <div class="subheading mb-3">Unimed Costa do Sol Full-time</div>
+            <p>Macaé Area, Brazil<br>
+              2nd level system service / support, Customization / Parameterization of software, Testing, Homologation and updating, Development of Oracle / SQL scripts, Systems planning, Training, Monitoring, Creating manuals, Activity reports, Planning and documentation.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2013 - May 2014</span>
+          </div>
+        </div>
+
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Web Design Intern</h3>
             <div class="subheading mb-3">Shout! Media Productions</div>
@@ -135,7 +140,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2008 - June 2010</span>
           </div>
-        </div>
+        </div>-->
 
       </div>
 
@@ -149,17 +154,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
+            <h3 class="mb-0">Anhanguera Educacional</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">August 2005 - Dec 2010</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">James Buchanan High School</h3>
             <div class="subheading mb-3">Technology Magnet Program</div>
@@ -168,7 +173,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2002 - May 2006</span>
           </div>
-        </div>
+        </div>-->
 
       </div>
     </section>
@@ -199,21 +204,21 @@
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
           </li>
-          <li class="list-inline-item">
+          <!--<li class="list-inline-item">
             <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
+          </li>-->
+          <!--<li class="list-inline-item">
             <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
+          </li>-->
+          <!--<li class="list-inline-item">
             <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
+          </li>-->
+          <!--<li class="list-inline-item">
             <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
+          </li>-->
+          <!--<li class="list-inline-item">
             <i class="fab fa-grunt"></i>
-          </li>
+          </li>-->
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
@@ -242,8 +247,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a web developer, I enjoy most of my time being outdoors. During the warmer months here in Brazil, I enjoy going to the beach, biking and hicking.</p>
+        <p class="mb-0">When forced indoors, I enjoy this time to learn something new and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
     </section>
 
@@ -255,12 +260,13 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Curso de Desenvolvimento WEB com ES6, TypeScript e Angular
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            Git e Github para iniciantes</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
+            <!--<i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
             Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
           <li>
@@ -278,7 +284,7 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Place - James Buchanan High School - Hackathon 2005</li>-->
         </ul>
       </div>
     </section>
