--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#idiom">Idiom</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
       </ul>
@@ -96,7 +102,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">OWN Solutions</div>
+            <div class="subheading mb-3">OWN Solutions Full-time</div>
             <p>Working in some Angular projects as a freelancer and getting experience at the same time.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -123,8 +129,8 @@
           <div class="resume-content">
             <h3 class="mb-0">System Support Specialist</h3>
             <div class="subheading mb-3">Unimed Costa do Sol Full-time</div>
-            <p>Macaé Area, Brazil<br>
-              2nd level system service / support, Customization / Parameterization of software, Testing, Homologation and updating, Development of Oracle / SQL scripts, Systems planning, Training, Monitoring, Creating manuals, Activity reports, Planning and documentation.</p>
+            <p>Macaé, Rio de Janeiro, Brazil<br>
+              Support/2nd level system service , Parameterization of software, Testing, Homologation and updating, Development of Oracle / SQL scripts, Systems planning, Training, Monitoring, Creating manuals, Activity reports, Planning and documentation.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2013 - May 2014</span>
@@ -251,6 +257,57 @@
         <p class="mb-0">When forced indoors, I enjoy this time to learn something new and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
     </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="portfolio">
+        <div class="w-100">
+          <h2 class="mb-5">Portfolio</h2>
+  
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
+              <h3 class="mb-0">#1 Optimum Web Site</h3>
+              <div class="subheading mb-3">Presenting a new brand</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">January 2019</span>
+            </div>
+          </div>
+          <div class="container">
+              <div class="row">
+                <div class="col-sm">
+                    <img class="img-fluid" id="amostra" src="img/profile2.jpg">
+                  </div>
+                <div class="col-sm">
+                  <p>Working in some Angular projects as a freelancer and getting experience at the same time.</p>
+                </div>                
+              </div>
+            </div>
+        </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="idiom">
+        <div class="w-100">
+          <h2 class="mb-5">Idiom</h2>
+      <div class="subheading mb-3">Languages</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Portugues, Maternal language </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              English, Advanced</li>          
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              French, Begginner</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Spanish, Begginner</li>
+          </ul>
+        </div>
+      </section>
 
     <hr class="m-0">
 
