--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - eltoncarv</title>
+  <title>Resume - Elton Marinho</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Elton Marinho</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile2.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/elton_linkedin.png" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,21 +72,21 @@
         <h1 class="mb-0">Marinho
           <span class="text-primary">Elton</span>
         </h1>
-        <div class="subheading mb-5">163 Jose Linhares Street  · Macae-RJ, CO 27920-360 · (62) 99126 8200 ·
+        <div class="subheading mb-5">Q24 L19 Pedro A Cabral Street  · Anapolis, Brazil CO 75084-350 · (+55) 62 99126 8200 ·
           <a href="mailto:eltoncarv@yahoo.com.br">eltoncarv@yahoo.com.br</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to obtain good collective results and quality of the company's services</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/eltoncarv/">
+          <a href="https://www.linkedin.com/in/eltoncarv/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/eltonmarinho">
+          <a href="https://github.com/eltonmarinho" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/toncarv" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://www.facebook.com/eltoncarv">
+          <a href="https://www.facebook.com/eltoncarv" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -102,8 +102,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">OWN Solutions Full-time</div>
-            <p>Working in some Angular projects as a freelancer and getting experience at the same time.</p>
+            <div class="subheading mb-3">Freelancer Full-time</div>
+            <p>Working in NodeJs, ReactJS and React-Native projects as a freelancer.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Dec 2018 - Present</span>
@@ -115,8 +115,8 @@
             <h3 class="mb-0">Information System Support Specialist</h3>
             <div class="subheading mb-3">Sapiensia Technology and Development Full-time</div>
             <p>Macaé, Rio de Janeiro, Brazil<br>
-              • Agile teams using tools like JIRA.
-              • Advanced knowledge of SQL, Elasticsearch, Slack, HTML, CSS, GIT.</p>
+              • Agile teams using JIRA.
+              • SQL, Elasticsearch, CSS, Angular, ReactJS, NodeJS, GIT.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2014 - Dec 2018</span>
@@ -130,7 +130,7 @@
             <h3 class="mb-0">System Support Specialist</h3>
             <div class="subheading mb-3">Unimed Costa do Sol Full-time</div>
             <p>Macaé, Rio de Janeiro, Brazil<br>
-              Support/2nd level system service , Parameterization of software, Testing, Homologation and updating, Development of Oracle / SQL scripts, Systems planning, Training, Monitoring, Creating manuals, Activity reports, Planning and documentation.</p>
+              Support/2nd level system service helpdesk, Testing, SQL scripts, Training, manuals, reports.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2013 - May 2014</span>
@@ -170,16 +170,17 @@
           </div>
         </div>
 
-        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Bootcamp Gostack</h3>
+            <div class="subheading mb-3">Fullstack Rocketseat</div>
+            <div>Immersive training to master the most modern technologies.</div>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">June 2020 - August 2020</span>
           </div>
-        </div>-->
+        </div>
 
       </div>
     </section>
@@ -228,6 +229,18 @@
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="fab fa-yarn"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-docker"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-android"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-apple"></i>
+          </li>
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
@@ -253,8 +266,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. During the warmer months here in Brazil, I enjoy going to the beach, biking and hicking.</p>
-        <p class="mb-0">When forced indoors, I enjoy this time to learn something new and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>I spend part of my time being outdoors. During the warmer months in Brazil, I enjoy going to the beach, biking and hicking.</p>
       </div>
     </section>
 
@@ -266,20 +278,23 @@
   
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
-              <h3 class="mb-0">#1 Optimum Web Site</h3>
-              <div class="subheading mb-3">Presenting a new brand</div>
+              <h3 class="mb-0">#1 Flexbox</h3>
+              <div class="subheading mb-3">Twitter Web Site</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2019</span>
+              <span class="text-primary">July 2020</span>
             </div>
           </div>
           <div class="container">
               <div class="row">
                 <div class="col-sm">
-                    <img class="img-fluid" id="amostra" src="img/profile2.jpg">
+                    <img class="img-fluid" id="amostra" src="img/portfolio_twitter.png">
                   </div>
                 <div class="col-sm">
-                  <p>Working in some Angular projects as a freelancer and getting experience at the same time.</p>
+                  <p>Description</p>
+                  <p>Twitter layout created using flexbox technologies</p>
+                  <a style="color:#2e58c8; font-weight: bold" href="https://eltonmarinho.github.io/flexbox-css-layout/" target="blank">go to website</a></br>
+                  <a style="color:#2e58c8; font-weight: bold" href="https://github.com/eltonmarinho/flexbox-css-layout" target="blank">go to the Repository</a>
                 </div>                
               </div>
             </div>
@@ -295,16 +310,12 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Portugues, Maternal language </li>
+              Portuguese, Maternal language 
+            </li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              English, Advanced</li>          
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              French, Begginner</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Spanish, Begginner</li>
+              English, Intermediate Upper
+            </li> 
           </ul>
         </div>
       </section>
@@ -317,13 +328,22 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Curso de Desenvolvimento WEB com ES6, TypeScript e Angular
+            Development WEB ES6, TypeScript e Angular Course - 2019
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Git e Github para iniciantes</li>
+            Git & Github Excellence - online course - Udemy 2019</li>
           <li>
-            <!--<i class="fa-li fa fa-trophy text-warning"></i>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Certificate of Language Excellence - Italki Language Challenge 2020
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Bootcamp GoStack - Full Stack Development - expected graduation Aug/2020
+          </li>
+          <!--<li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
             Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
           <li>
