added project git-explorer to portfolio

--- a/index.html
+++ b/index.html
@@ -293,11 +293,35 @@
                 <div class="col-sm">
                   <p>Description</p>
                   <p>Twitter layout created using flexbox technologies</p>
-                  <a style="color:#2e58c8; font-weight: bold" href="https://eltonmarinho.github.io/flexbox-css-layout/" target="blank">go to website</a></br>
-                  <a style="color:#2e58c8; font-weight: bold" href="https://github.com/eltonmarinho/flexbox-css-layout" target="blank">go to the Repository</a>
+                  <a style="color:#2e58c8;" href="https://eltonmarinho.github.io/flexbox-css-layout/" target="blank">go to website</a></br>
+                  <a style="color:#2e58c8;" href="https://github.com/eltonmarinho/flexbox-css-layout" target="blank">go to the Repository</a>
                 </div>                
               </div>
             </div>
+            <br>
+            <br>
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content">
+                <h3 class="mb-0">#2 Public API</h3>
+                <div class="subheading mb-3">Interface to find repositories and list issues</div>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary">July 2020</span>
+              </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                  <div class="col-sm">
+                      <img class="img-fluid" id="amostra" src="img/git-explorer.PNG">
+                    </div>
+                  <div class="col-sm">
+                    <p>Description</p>
+                    <p>Interface created using Github public API</p>
+                    <a style="color:#2e58c8;" href="https://eltonmarinho.github.io/git-explorer/" target="blank">go to website</a></br>
+                    <a style="color:#2e58c8;" href="https://github.com/eltonmarinho/git-explorer/" target="blank">go to the Repository</a>
+                  </div>                
+                </div>
+              </div>
         </div>
     </section>
 
