--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <div class="container">
                 <div class="row">
                   <div class="col-sm">
-                      <img class="img-fluid" id="amostra" src="img/git-explorer.png">
+                      <img class="img-fluid" id="amostra" src="img/git_explorer.png">
                     </div>
                   <div class="col-sm">
                     <p>Description</p>
