portfolio photo size increased

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           <div class="container">
               <div class="row">
                 <div class="col-sm">
-                    <img class="img-fluid" id="amostra" src="img/portfolio_twitter.png">
+                    <img class="img-fluid" id="amostra2" src="img/portfolio_twitter.png">
                   </div>
                 <div class="col-sm">
                   <p>Description</p>
@@ -307,12 +307,13 @@
               </div>
               <div class="resume-date text-md-right">
                 <span class="text-primary">July 2020</span>
+
               </div>
             </div>
             <div class="container">
                 <div class="row">
                   <div class="col-sm">
-                      <img class="img-fluid" id="amostra" src="img/git_explorer.png">
+                      <img class="img-fluid" id="amostra2" src="img/git_explorer.png">
                     </div>
                   <div class="col-sm">
                     <p>Description</p>
