git explorer link changed

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                   <div class="col-sm">
                     <p>Description</p>
                     <p>Interface created using Github public API</p>
-                    <a style="color:#2e58c8;" href="https://eltonmarinho.github.io/git-explorer/" target="blank">go to website</a></br>
+                    <a style="color:#2e58c8;" href="https://git-explorer-omega.vercel.app/" target="blank">go to website</a></br>
                     <a style="color:#2e58c8;" href="https://github.com/eltonmarinho/git-explorer/" target="blank">go to the Repository</a>
                   </div>                
                 </div>
